--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,13 @@ body {
 .ant-layout-header h1 {
   color: #cccccc;
   font-size: 20px;
+  display: inline;
+  margin-right: 20px;
+}
+
+.ant-layout-header h3 {
+  color: #cccccc;
+  display: inline;
 }
 
 .ant-row {
