--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,11 @@ body {
 .ant-layout-header h3 {
   color: #cccccc;
   display: inline;
+  padding: 10px
+}
+
+.ant-layout-header h3:hover {
+  background-color: rgba(255,255,255,.2);
 }
 
 .ant-row {
@@ -28,4 +33,9 @@ p.description {
 
 .store-card {
   width: 200px;
+}
+
+.ant-layout-content > iframe {
+  height: 90vh;
+  width: 100%
 }
