--- a/pages/app.css
+++ b/pages/app.css
@@ -43,3 +43,19 @@ table {
 .ant-radio-group .ant-radio-wrapper span {
   font-size: large;
 }
+
+@media (max-width: 600px) {
+  .ant-layout-header {
+    padding: 0;
+    text-wrap: nowrap;
+  }
+  .ant-layout-header h1 {
+    display: none;
+  }
+}
+
+@media (min-width: 601px) {
+  .ant-layout-header .home-icon {
+    display: none;
+  }
+}
