--- a/pages/app.css
+++ b/pages/app.css
@@ -1,16 +1,5 @@
-thead tr {
-  background: grey;
-  font-weight: bold;
-  border-bottom: 1px solid black;
-}
-tr:nth-child(even) {
-  background-color: lightgrey;
-}
-table {
-  width: 100%;
-  padding: 0;
-  margin: 0 0 20px 0;
-  font-size: 13px;
+.ant-layout-content {
+  padding: 16px;
 }
 
 .ant-card {
@@ -34,56 +23,16 @@ table {
   font-size: large;
 }
 
-@media (max-width: 600px) {
-  .ant-layout-header {
-    padding: 0;
-    text-wrap: nowrap;
-  }
-  .ant-layout-header h1 {
-    display: none;
-  }
-}
-
-@media (min-width: 601px) {
-  .ant-layout-header .home-icon {
-    display: none;
-  }
-}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
 
-.ant-layout-header h1 {
-  color: #cccccc;
-  font-size: 20px;
-  display: inline;
-  margin-right: 20px;
-}
-
-.ant-layout-header h3 {
-  color: #cccccc;
-  display: inline;
-  padding: 10px
-}
-
-.ant-layout-header h3:hover {
-  background-color: rgba(255,255,255,.2);
-}
-
-.ant-row {
-  padding: 10px;
-}
-
 p.description {
   color: black;
   margin: 10px;
   text-align: left;
-}
-
-.store-card {
-  width: 200px;
 }
 
 .ant-layout-content > iframe {
